# rubik-tflite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tflite_demo.c
c/: CMakeLists.txt  tflite_demo.c
python/: requirements.txt  tflite_demo.py
